[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/PopupCentered.gd" type="Script" id=1]

[node name="PopupDialog" type="PopupPanel"]
visible = true
self_modulate = Color( 1, 1, 1, 0.882353 )
margin_right = 808.0
margin_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 804.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Offset" type="ReferenceRect" parent="VBoxContainer"]
margin_right = 800.0
rect_min_size = Vector2( 800, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 4.0
margin_right = 800.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 40, 0 )

[node name="Desc" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 756.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "DESC"
align = 1
valign = 1

[node name="ReferenceRect2" type="ReferenceRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 760.0
margin_right = 800.0
margin_bottom = 14.0
rect_min_size = Vector2( 40, 0 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 800.0
margin_bottom = 26.0

[node name="HBoxYesNo" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 136.0
margin_right = 892.0
margin_bottom = 156.0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/HBoxYesNo"]
margin_right = 248.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ButtonYes" type="Button" parent="VBoxContainer/HBoxYesNo"]
margin_left = 252.0
margin_right = 317.0
margin_bottom = 20.0
text = "BTN_YES"

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/HBoxYesNo"]
margin_left = 321.0
margin_right = 569.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ButtonNo" type="Button" parent="VBoxContainer/HBoxYesNo"]
margin_left = 573.0
margin_right = 638.0
margin_bottom = 20.0
text = "BTN_NO"

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/HBoxYesNo"]
margin_left = 642.0
margin_right = 892.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="HBoxNoYes" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 148.0
margin_right = 892.0
margin_bottom = 168.0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/HBoxNoYes"]
margin_right = 248.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ButtonNo" type="Button" parent="VBoxContainer/HBoxNoYes"]
margin_left = 252.0
margin_right = 317.0
margin_bottom = 20.0
text = "BTN_NO"

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/HBoxNoYes"]
margin_left = 321.0
margin_right = 569.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ButtonYes" type="Button" parent="VBoxContainer/HBoxNoYes"]
margin_left = 573.0
margin_right = 638.0
margin_bottom = 20.0
text = "BTN_YES"

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/HBoxNoYes"]
margin_left = 642.0
margin_right = 892.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="HBoxOK" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 136.0
margin_right = 892.0
margin_bottom = 156.0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/HBoxOK"]
margin_right = 248.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ButtonOK" type="Button" parent="VBoxContainer/HBoxOK"]
margin_left = 252.0
margin_right = 317.0
margin_bottom = 20.0
text = "BTN_OK"

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/HBoxOK"]
margin_left = 321.0
margin_right = 569.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="Offset4" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 800.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxYesNo/ButtonYes" to="." method="_on_ButtonYes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxYesNo/ButtonNo" to="." method="_on_ButtonNo_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxNoYes/ButtonNo" to="." method="_on_ButtonNo_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxNoYes/ButtonYes" to="." method="_on_ButtonYes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxOK/ButtonOK" to="." method="_on_ButtonOK_pressed"]
